k8s-manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sales-app
  labels:
    # Pod Security Admission (PSA): Enforce "restricted" profile at the namespace level
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
